# Computer_Science_Training_app

./: CMakeLists.txt  README.md  build_debug_run.bat  build_release_run.bat  rebuild_clean.bat
coding_bootcamp_v1/: CMakeLists.txt  README.md  build_release_run.bat  resources.qrc  run_app.bat
coding_bootcamp_v1/advanced_learning_packs/: README.md
coding_bootcamp_v1/attempt_templates/: code_attempt_review_template.md  debugging_retrospective_template.md
coding_bootcamp_v1/capstone_templates/: capstone_product_spec_template.md  mock_interview_packet_template.md
coding_bootcamp_v1/career_templates/: resume_bullet_examples.md
coding_bootcamp_v1/certification_templates/: completion_report_template.md
coding_bootcamp_v1/content_packs/: v17_model_adapter_pack.md  v23_real_verifier_pack.md  v25_advanced_helper_pack.md
coding_bootcamp_v1/content_packs/role_tracks/: professional_role_tracks.md
coding_bootcamp_v1/database_templates/: progress_schema_reference.sql
coding_bootcamp_v1/devops_templates/docker/: Dockerfile.python
coding_bootcamp_v1/devops_templates/github_actions/: ci_cpp.yml
coding_bootcamp_v1/docs/: ARCHITECTURE.md  CAPSTONE_LADDER.md  CAREER_PATHS.md  FIRST_RUN_GUIDE.md  HELP_CENTER.md  LANGUAGE_WORKSPACE.md  ROADMAP.md  ROADMAP_TO_COMPLETION.md  V12_INSTRUCTOR_BOOTCAMP_MODE.md  V13_OPTIONAL_AI_TUTOR_MODE.md  V16_CODE_ATTEMPT_TRACKING_REVIEW_HISTORY.md  V17_LOCAL_HOSTED_MODEL_ADAPTER.md  V24_BUILD_NOTES.md  V24_PROBLEM_SOLVING_EFFICIENCY.md  V25_ADVANCED_HELPER_TIMER_POPUPS.md  V25_BUILD_NOTES.md  V4_EXERCISE_RUNNER.md  V5_DEEP_CURRICULUM.md  V6_ALGORITHM_VISUALIZER.md  V7_PROJECT_GENERATOR.md  V8_PORTFOLIO_BUILDER.md  VERSION_PLAN.md
coding_bootcamp_v1/examples/languages/cpp/: README.md
coding_bootcamp_v1/examples/languages/csharp/: README.md
coding_bootcamp_v1/examples/languages/go/: README.md
coding_bootcamp_v1/examples/languages/java/: Main.java  README.md
coding_bootcamp_v1/examples/languages/javascript/: index.js
coding_bootcamp_v1/examples/languages/python/: README.md
coding_bootcamp_v1/examples/languages/rust/: README.md
coding_bootcamp_v1/examples/languages/sql/: README.md
coding_bootcamp_v1/examples/languages/typescript/: package.json
coding_bootcamp_v1/examples/v20_verified_exercises/lang_javascript/ex_base_converter/: main.js
coding_bootcamp_v1/examples/v20_verified_exercises/lang_javascript/ex_input_validator/: main.js
coding_bootcamp_v1/examples/v20_verified_exercises/lang_javascript/ex_lru_cache/: test.js
coding_bootcamp_v1/examples/v20_verified_exercises/lang_javascript/ex_word_frequency/: test.js
coding_bootcamp_v1/examples/v20_verified_exercises/lang_python/ex_base_converter/: main.py  test_main.py
coding_bootcamp_v1/examples/v20_verified_exercises/lang_python/ex_ci_pipeline/: main.py
coding_bootcamp_v1/examples/v20_verified_exercises/lang_python/ex_file_bytes/: main.py  test_main.py
coding_bootcamp_v1/examples/v20_verified_exercises/lang_python/ex_input_validator/: test_main.py
coding_bootcamp_v1/examples/v20_verified_exercises/lang_python/ex_lru_cache/: main.py
coding_bootcamp_v1/examples/v20_verified_exercises/lang_python/ex_word_frequency/: main.py  test_main.py
coding_bootcamp_v1/examples/v21_verified_exercises/lang_cpp/ex_base_converter/: main.cpp  test.bat
coding_bootcamp_v1/examples/v21_verified_exercises/lang_cpp/ex_capstone_pitch/: test.bat
coding_bootcamp_v1/examples/v21_verified_exercises/lang_cpp/ex_incident_postmortem/: main.cpp
coding_bootcamp_v1/examples/v21_verified_exercises/lang_cpp/ex_rag_design_doc/: main.cpp
coding_bootcamp_v1/examples/v21_verified_exercises/lang_cpp/ex_role_ai_eval/: test.bat
coding_bootcamp_v1/examples/v21_verified_exercises/lang_cpp/ex_role_systems_release/: README.md
coding_bootcamp_v1/examples/v21_verified_exercises/lang_cpp/ex_safe_login_review/: README.md
coding_bootcamp_v1/examples/v21_verified_exercises/lang_cpp/ex_v15_cross_language_api_client/: main.cpp
coding_bootcamp_v1/examples/v21_verified_exercises/lang_cpp/ex_v15_production_checklist/: test.bat
coding_bootcamp_v1/examples/v21_verified_exercises/lang_csharp/ex_base_converter/: test.bat
coding_bootcamp_v1/examples/v21_verified_exercises/lang_csharp/ex_capstone_pitch/: test.bat
coding_bootcamp_v1/examples/v21_verified_exercises/lang_csharp/ex_incident_postmortem/: Program.cs
coding_bootcamp_v1/examples/v21_verified_exercises/lang_csharp/ex_rest_design/: test.bat
coding_bootcamp_v1/examples/v21_verified_exercises/lang_csharp/ex_role_ai_eval/: Program.cs  README.md
coding_bootcamp_v1/examples/v21_verified_exercises/lang_csharp/ex_safe_login_review/: test.bat
coding_bootcamp_v1/examples/v21_verified_exercises/lang_csharp/ex_v15_cross_language_api_client/: Program.cs
coding_bootcamp_v1/examples/v21_verified_exercises/lang_csharp/ex_v15_refactor_journal/: Program.cs
coding_bootcamp_v1/examples/v21_verified_exercises/lang_csharp/ex_word_frequency/: README.md
coding_bootcamp_v1/examples/v21_verified_exercises/lang_go/ex_base_converter/: main.go
coding_bootcamp_v1/examples/v23_course_exercises/: manifest.json
coding_bootcamp_v1/include/: MainWindow.h
coding_bootcamp_v1/instructor_templates/: cohort_assignment_template.md  learner_progress_review_template.md
coding_bootcamp_v1/model_adapter_templates/: openai_provider_stub.md  prompt_safety_checklist.md
coding_bootcamp_v1/project_templates/: README.md
coding_bootcamp_v1/project_templates/cpp/: TEMPLATE_NOTES.md
coding_bootcamp_v1/project_templates/java/: TEMPLATE_NOTES.md
coding_bootcamp_v1/project_templates/javascript/: TEMPLATE_NOTES.md
coding_bootcamp_v1/project_templates/sql/: TEMPLATE_NOTES.md
coding_bootcamp_v1/project_templates/typescript/: TEMPLATE_NOTES.md
coding_bootcamp_v1/release_templates/: installer_plan.md
coding_bootcamp_v1/scripts/: package_release.bat  run_all_bat_files.bat  smoke_test_v15.bat  smoke_test_v17.bat  smoke_test_v18.bat  smoke_test_v19.bat  smoke_test_v20.bat  smoke_test_v22.bat  smoke_test_v25.bat
coding_bootcamp_v1/src/: MainWindow.cpp  main.cpp
(+1317 files in other folders)
